--- a/mern-crud-app/src/components/NavBar.css
+++ b/mern-crud-app/src/components/NavBar.css
@@ -1,10 +1,52 @@
-.tabs{
-    text-decoration: none;
-    color: aliceblue;
-    margin-right: 20px;
-    font-size: 20px;
+.top {
+    width: 100%;
+    height: 50px;
+    background-color: rgb(243, 217, 217);
+    position: sticky;
+    top: 0;
+    display: flex;
+    align-items: center;
+    z-index: 999;
+    font-family: "Josefin Sans", sans-serif;
+}
+  
+.topLeft,
+.topRight {
+    flex: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.topCenter {
+    flex: 6;
+}
+  
+.topList {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    list-style: none;
     
 }
-.tabs:hover{
-    color: brown;
+  
+.topListItem {
+    margin-right: 20px;
+    font-size: 18px;
+    font-weight: 300;
+    cursor: pointer;
+    list-style: none;
+}
+  
+.topListItem:hover{
+      color: gray;
+     
+}
+.link{
+    text-decoration: none;
+    font-family: 'Josefin Sans', sans-serif;
+    color: black;
+}
+.link:hover{
+    color: rgba(34, 33, 43, 0.884);
 }
